kubernetes/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ns
  template:
    metadata:
      labels:
        app: ns
    spec:
 
      containers:
      - name: ns
        image: cirko33/others
        ports:
          - containerPort: 8080

      - name: pgns
        image: postgres
        ports:
          - containerPort: 5432
      #   volumeMounts:
      #     - mountPath: /var/lib/postgresql/data
      #       name: datans 

      # volumes:
      #   - name: datans
      #     persistentVolumeClaim:
      #       claimName: host-pvc
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: bg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bg
  template:
    metadata:
      labels:
        app: bg
    spec:
      containers:
      - name: bg
        image: cirko33/others
        ports:
          - containerPort: 8080

      - name: pgbg
        image: postgres
        ports:
          - containerPort: 5432
      #   volumeMounts:
      #     - mountPath: /var/lib/postgresql/data
      #       name: databg

      # volumes:
      #   - name: databg
      #     persistentVolumeClaim:
      #       claimName: host-pvc
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nis
  template:
    metadata:
      labels:
        app: nis
    spec:
      containers:
      - name: nis
        image: cirko33/others
        ports:
          - containerPort: 8080

      - name: pgnis
        image: postgres
        ports:
          - containerPort: 5432
      #   volumeMounts:
      #     - mountPath: /var/lib/postgresql/data
      #       name: datanis

      # volumes:
      #   - name: datanis
      #     persistentVolumeClaim:
      #       claimName: host-pvc
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: central
spec:
  replicas: 1
  selector:
    matchLabels:
      app: central
  template:
    metadata:
      labels:
        app: central
    spec:
      containers:
      - name: pgcentral
        image: postgres
        ports:
          - containerPort: 5432
      #   volumeMounts:
      #     - mountPath: /var/lib/postgresql/data
      #       name: datacentral

      - name: central
        image: cirko33/central
        ports:
          - containerPort: 8080

      # volumes:
      #   - name: datacentral
      #     persistentVolumeClaim:
      #       claimName: host-pvc
---
