kubernetes/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: ns-service
spec:
  selector:
    app: ns
  ports:
    - protocol: 'TCP'
      port: 8080
      targetPort: 8080
  type: ClusterIP
---

apiVersion: v1
kind: Service
metadata:
  name: bg-service
spec:
  selector:
    app: bg
  ports:
    - protocol: 'TCP'
      port: 8080
      targetPort: 8080
  type: ClusterIP
---

apiVersion: v1
kind: Service
metadata:
  name: nis-service
spec:
  selector:
    app: nis
  ports:
    - protocol: 'TCP'
      port: 8080
      targetPort: 8080
  type: ClusterIP
---

apiVersion: v1
kind: Service
metadata:
  name: central-service
spec:
  selector:
    app: central
  ports:
    - protocol: 'TCP'
      port: 8080
      targetPort: 8080
  type: ClusterIP
---
