kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  labels:
    app: ingress
  
spec:
  rules:
    - host: ns.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ns-service
                port:
                  number: 8080

    - host: bg.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bg-service
                port:
                  number: 8080
    
    - host: nis.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nis-service
                port:
                  number: 8080
                  
    - host: central.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: central-service
                port:
                  number: 8080
